welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
			droite()
                              ^SnakeBuggle:23: error: type mismatch;
 found   : Unit
 required: Boolean
			gauche()
                              ^